# tg-bot-rag

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  questions.py
embedding/: embed.py
processed/: scraped.csv
